fix staff service